src/test/compile-fail/arg-count-mismatch.rs
// error-pattern: argument count

fn f(int x) {
}

fn main() {
  let () i;
  i = f();
}
